--- a/FeFoodie/package.json
+++ b/FeFoodie/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "daisyui": "^2.31.0",
+    "@headlessui/react": "^1.7.3",
+    "@tanstack/react-location": "^3.7.4",
+    "@tanstack/react-query": "^4.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
