--- a/FeFoodie/package.json
+++ b/FeFoodie/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^4.10.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
